--- a/chaiaurDjango/templates/website/about.html
+++ b/chaiaurDjango/templates/website/about.html
@@ -5,5 +5,5 @@
 {% endblock %}
 
 {% block content %}
-    <h1 class = "bg-red-600 text-3xl"> Chai aur code | About Page </h1>
+    <h1 class = "text-3xl"> Chai aur code | About Page </h1>
 {% endblock %}
