--- a/chaiaurDjango/chai/templates/chai/all_chai.html
+++ b/chaiaurDjango/chai/templates/chai/all_chai.html
@@ -8,11 +8,14 @@
     <h1> All chai for you!</h1>
 
     <div class ="grid grid-cols-3 gap-4 m-4">
-        {% for chai in chais  %}
-        <div class = "bg-blue-800 p-5 rounded"> 
-            <img class = "rounded shadow-lg" src = "{{chai.image.url}}" alt = "">
-            <h3 class = "text-2xl font-bold"> {{chai.name}} </h3>
-        </div>
+        {% for chai in chais %}
+            <div class="chai-item">
+                <img src="{{ chai.image.url }}" alt="{{ chai.name }}">
+                <h3>{{ chai.name }}</h3>
+                <p>{{ chai.description }}</p>
+                <a href="{% url 'chai_detail' chai.id %}">Details</a>
+            </div>
+
         {% endfor %}
     </div>
 
